login done, next up log out and hide links

--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -6,14 +6,12 @@
     </div>
     <div class="col-md-6">
       <div class="btn-group pull-right">
-        <a routerLink= "['/edit-client/'+id]" class= "btn btn-dark">Edit</a>
+        <a [routerLink]= "['/edit-client/'+id]" class= "btn btn-dark">Edit</a>
         <button class="btn btn-danger" (click)="onDeleteClick()">Delete</button> 
       </div>
     </div>
   </div>
-
 <hr>
-
 <div *ngIf = 'client' class='card'>
   <h3 class="card-header"> {{client.firstName}} {{client.lastnName}}</h3>
   <div class="card-body">
@@ -22,8 +20,20 @@
         <h4>Client ID: {{id}}</h4>
       </div>
       <div class="col-md-4">
-        <h3 class="pull-right">Balance</h3>
-        <span [class.text-danger]="hasBalance"> {{client.balance | currency:"USD" : $}} </span>
+        <h3 class="pull-right">Balance
+        <span [class.text-danger]="hasBalance" [class.text-success]="!hasBalance"> {{client.balance | currency:"USD" : $}} </span>
+       <small> <a (click)= "showBalanceUpdate = !showBalanceUpdate" ><i class="fa fa-pencil"></i></a> </small>
+      </h3>
+      <div class="clearfix">
+        <form *ngIf="showBalanceUpdate" (submit)="updateBalance(id)">
+          <div class="input-group">
+            <input type="text" name="balance" class="form-control" [(ngModel)]="client.balance">
+            <span class="input-group-btn">
+              <button type="submit" class="btn btn-primary">Update</button>
+            </span>
+          </div>
+        </form>
+      </div>
       </div>
     </div>
   </div>
