--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -1,3 +1,82 @@
-<p>
-  edit-client works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <a href="#" routerLink = "/" class = "btn btn-link">
+      <i class= "fa fa-arrow-circle-o-left"></i> Back to Dashboard
+    </a>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Edit Client
+  </div>
+  <div class="card-body">
+    <form novalidate #f="ngForm" (ngSubmit) = "onSubmit(f)">
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input 
+         type="text"
+         class="form-control" 
+         [ngClass] = "{'is-invalid' : clientFirstName.errors?.required && clientFirstName.touched || clientFirstName.errors?.minlength}"
+         [(ngModel)]="client.firstName" name= "firstName" #clientFirstName = "ngModel" minlength="3" required>
+        <div *ngIf = "clientFirstName.errors?.required && clientFirstName.touched" class = "invalid-feedback">
+          First Name is required
+        </div>
+        <div *ngIf = "clientFirstName.errors?.minlength && clientFirstName.touched" class = "invalid-feedback">
+            Must be at least 3 characters
+          </div>
+        </div>
+      <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input 
+           type="text"
+           class="form-control" 
+           [ngClass] = "{'is-invalid' : clientLastName.errors?.required && clientLastName.touched || clientLastName.errors?.minlength}"
+           [(ngModel)]="client.lastName" name= "lastName" #clientLastName = "ngModel" minlength="3" required>
+          <div *ngIf = "clientLastName.errors?.required && clientLastName.touched" class = "invalid-feedback">
+            Last Name is required
+          </div>
+          <div *ngIf = "clientLastName.errors?.minlength && clientLastName.touched" class = "invalid-feedback">
+              Must be at least 3 characters
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <input 
+             type="email"
+             class="form-control" 
+             [ngClass] = "{'is-invalid' : clientEmail.errors?.required && clientEmail.touched || clientEmail.errors?.pattern}"
+             [(ngModel)]="client.Email" name= "email" #clientEmail = "ngModel" required 
+             pattern= "^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+            <div *ngIf = "clientEmail.errors?.required && clientEmail.touched" class = "invalid-feedback">
+              Email address is required
+            </div>
+            <div *ngIf = "clientEmail.errors?.pattern && clientEmail.touched" class = "invalid-feedback">
+                Email address is invalid
+              </div>
+          </div>
+          <div class="form-group">
+              <label for="phone">Phone</label>
+              <input 
+               type="text"
+               class="form-control" 
+               [ngClass] = "{'is-invalid' : clientPhone.errors?.required && clientPhone.touched || clientPhone.errors?.pattern}"
+               [(ngModel)]="client.Phone" name= "phone" #clientPhone = "ngModel" required
+               pattern = "\d{3}[\-]\d{3}[\-]\d{4}">
+              <div *ngIf = "clientPhone.errors?.required && clientPhone.touched" class = "invalid-feedback">
+                Phone is required
+              </div>
+              <div *ngIf = "clientPhone.errors?.pattern && clientPhone.touched" class = "invalid-feedback">
+                  Phone number is invalid, please include area code and dashes (xxx-xxx-xxxx)
+                </div>
+            </div>            
+          <div class="form-group">
+              <label for="balance">Balance</label>
+              <input 
+               type="text"
+               class="form-control" 
+               [(ngModel)]="client.Balance" name= "balance" #clientBalance = "ngModel" [disabled]= "disableBalanceOnEdit">
+           </div>
+           <input type="submit" value= "Submit" class= "btn btn-primary btn-block">
+    </form>
+  </div>
+</div>
