--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,17 +5,24 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item ">
+    <ul *ngIf="isLoggedIn" class="navbar-nav mr-auto">
+      <li *ngIf="isLoggedIn" class="nav-item ">
         <a class="nav-link" href="#" routerLink ="/" >Dashboard </a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item ">
+    
+    <ul class="navbar-nav ml-auto">  
+      <li *ngIf= "!isLoggedIn" class="nav-item ">
         <a class="nav-link" href="#" routerLink ="/register" >Register </a>
       </li>
-      <li class="nav-item ">
+      <li *ngIf="!isLoggedIn" class="nav-item ">
         <a class="nav-link" href="#" routerLink ="/login" >Login </a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item ">
+        <a class="nav-link" href="#" >{{loggedInUser}} </a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item ">
+        <a class="nav-link" href="#" (click)="onLogoutClick()" >Log Out </a>
       </li>
     </ul>
   </div>
