--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -45,7 +45,7 @@
              type="email"
              class="form-control" 
              [ngClass] = "{'is-invalid' : clientEmail.errors?.required && clientEmail.touched || clientEmail.errors?.pattern}"
-             [(ngModel)]="client.Email" name= "email" #clientEmail = "ngModel" required 
+             [(ngModel)]="client.email" name= "email" #clientEmail = "ngModel" required 
              pattern= "^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
             <div *ngIf = "clientEmail.errors?.required && clientEmail.touched" class = "invalid-feedback">
               Email address is required
@@ -60,7 +60,7 @@
                type="text"
                class="form-control" 
                [ngClass] = "{'is-invalid' : clientPhone.errors?.required && clientPhone.touched || clientPhone.errors?.pattern}"
-               [(ngModel)]="client.Phone" name= "phone" #clientPhone = "ngModel" required
+               [(ngModel)]="client.phone" name= "phone" #clientPhone = "ngModel" required
                pattern = "\d{3}[\-]\d{3}[\-]\d{4}">
               <div *ngIf = "clientPhone.errors?.required && clientPhone.touched" class = "invalid-feedback">
                 Phone is required
