--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="#" routerLink ="/login" >Login </a>
       </li>
       <li *ngIf="isLoggedIn" class="nav-item ">
-        <a class="nav-link" href="#" >{{loggedInUser}} </a>
+        <a class="nav-link" href=""  >{{loggedInUser}} </a>
       </li>
       <li *ngIf="isLoggedIn" class="nav-item ">
         <a class="nav-link" href="#" (click)="onLogoutClick()" >Log Out </a>
