--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,2 @@
-<p>
-  page-not-found works!
-</p>
+<h1>Page Not Found</h1>
+<p>You have entered a worm hole! Turn around while you still can!! :) </p>
