--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,8 +22,12 @@
         <a class="nav-link" href=""  >{{loggedInUser}} </a>
       </li>
       <li *ngIf="isLoggedIn" class="nav-item ">
+        <a class="nav-link" href="#" routerLink="/settings" >Settings </a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item ">
         <a class="nav-link" href="#" (click)="onLogoutClick()" >Log Out </a>
       </li>
+      
     </ul>
   </div>
 </nav>
