shows last name too

--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -13,7 +13,7 @@
   </div>
 <hr>
 <div *ngIf = 'client' class='card'>
-  <h3 class="card-header"> {{client.firstName}} {{client.lastnName}}</h3>
+  <h3 class="card-header"> {{client.firstName}} {{client.lastName}}</h3>
   <div class="card-body">
     <div class="row">
       <div class="col-md-8">
